[package]
name = "assoc"
version = "0.1.3"
authors = ["<mingyli34@gmail.com>"]
edition = "2018"
description = "Treat vectors like associative arrays"
documentation = "https://docs.rs/assoc"
readme = "README.md"
homepage = "https://github.com/mingyli/assoc"
repository = "https://github.com/mingyli/assoc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
